feat: add film search functionality